--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Website"
+title: "index"
 output: html_document
-date: "2025-03-27"
+date: "2025-03-28"
 ---
 
 ```{r setup, include=FALSE}
